Small refinements in demo-app
 * Fix typo.
 * Remove redundant commas.
 * Move ValidationExtensions in email on separate lines.

--- a/demo-app/src/app.component.html
+++ b/demo-app/src/app.component.html
@@ -35,7 +35,7 @@
                 <div class="col-md-12">
                     <input formControlName="age" type="number" class="form-control" id="age">
                     <ng2-mdf-validation-message [control]="age" *ngIf="!age.pristine"></ng2-mdf-validation-message>
-                    <span class="help-block">Number input with minimum value input and default error message</span>
+                    <span class="help-block">Number input with minimum value and default error message</span>
                 </div>
             </div>
 
